--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -2,7 +2,7 @@
               <div class="container-fluid px-0">
                 <div class="d-flex justify-content-between w-100" id="navbarSupportedContent">
                   <div class="d-flex align-items-center">
-                    <!-- Search form -->
+                    <!-- Search form 
                     <form class="navbar-search form-inline" id="navbar-search-main">
                       <div class="input-group input-group-merge search-bar">
                           <span class="input-group-text" id="topbar-addon">
@@ -28,7 +28,7 @@
                             <div class="row align-items-center">
                                 <div class="col-auto">
                                   <!-- Avatar -->
-                                  <img alt="Image placeholder" src="/static/assets/img/team/profile-picture-1.jpg" class="avatar-md rounded">
+                                  <img alt="Image placeholder" src="/static/assets/img/team/Avatar.jpeg" class="avatar-md rounded">
                                 </div>
                                 <div class="col ps-0 ms-2">
                                   <div class="d-flex justify-content-between align-items-center">
@@ -66,7 +66,7 @@
                             <div class="row align-items-center">
                                 <div class="col-auto">
                                   <!-- Avatar -->
-                                  <img alt="Image placeholder" src="/static/assets/img/team/profile-picture-3.jpg" class="avatar-md rounded">
+                                  <img alt="Image placeholder" src="/static/assets/img/team/Avatar.jpeg" class="avatar-md rounded">
                                 </div>
                                 <div class="col ps-0 m-2">
                                   <div class="d-flex justify-content-between align-items-center">
@@ -129,10 +129,10 @@
                     <li class="nav-item dropdown ms-lg-3">
                       <a class="nav-link dropdown-toggle pt-1 px-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="media d-flex align-items-center">
-                          <img class="avatar rounded-circle" alt="Image placeholder" src="/static/assets/img/team/profile-picture-3.jpg">
+                          <img class="avatar rounded-circle" alt="Image placeholder" src="/static/assets/img/team/Avatar.jpeg">
                           <div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
                             <span class="mb-0 font-small fw-bold text-gray-900">
-                              Current User: <strong>{{ request.user.username }}</strong>
+                              Usuário Atual: <strong>{{ request.user.username }}</strong>
                             </span>
                           </div>
                         </div>
