--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -16,6 +16,7 @@
                     <!-- / Search form -->
                   </div>
                   <!-- Navbar links -->
+                  <h1>{{ request.user.InstituicaoFk }}</h1> 
                   <ul class="navbar-nav align-items-center">
                     <li class="nav-item dropdown">
                       <a class="nav-link text-dark notification-bell unread dropdown-toggle" data-unread-notifications="true" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
