Ajustes nos módulos #5

--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Cadatrar {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -11,21 +11,21 @@
         <section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
             <div class="container">
                 <p class="text-center">
-                    Open-source Django Dashboard
+                    Help Rio
                 </p>
                 <div class="row justify-content-center form-bg-image" data-background-lg="/static/assets/img/illustrations/signin.svg">
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Django Volt - Sign UP
+                                    HelpRio App - Homologação
                                 </h1>
                                 <br />
                                 <p>
                                     {% if msg %}
                                         {{ msg | safe }}
                                     {% else %}
-                                        Add your credentials
+                                    Ambiente Criado para testes
                                     {% endif %}                                     
                                 </p> 
                             </div>
@@ -34,7 +34,7 @@
                                 {% csrf_token %}
 
                                 <div class="form-group mb-4">
-                                    <label for="email">Username</label>
+                                    <label for="email">Novo Usuário</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-user-circle"></span>
@@ -46,7 +46,7 @@
 
                                 <!-- Form -->
                                 <div class="form-group mb-4">
-                                    <label for="email">Your Email</label>
+                                    <label for="email">Email</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-envelope"></span>
@@ -60,7 +60,7 @@
                                     
                                     <!-- Form -->
                                     <div class="form-group mb-4">
-                                        <label for="password">Your Password</label>
+                                        <label for="password">Senha</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon2">
                                                 <span class="fas fa-unlock-alt"></span>
@@ -70,7 +70,7 @@
                                         <span class="text-error">{{ form.password1.errors }}</span>
                                     </div>
                                     <div class="form-group mb-4">
-                                        <label for="password">Password Confirmation</label>
+                                        <label for="password">Confirme sua senha</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon2">
                                                 <span class="fas fa-unlock-alt"></span>
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="d-grid">
-                                    <button type="submit" name="register" class="btn btn-gray-800">Sign UP</button>
+                                    <button type="submit" name="register" class="btn btn-gray-800">Cadastrar</button>
                                 </div>
                             </form>
                             <br />
