--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -34,7 +34,7 @@
                                 {% csrf_token %}
 
                                 <div class="form-group mb-4">
-                                    <label for="email">Novo Usuário</label>
+                                    <label for="usuario">Novo Usuário</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-user-circle"></span>
@@ -80,6 +80,15 @@
                                         <span class="text-error">{{ form.password2.errors }}</span>
                                     </div>
 
+                                    <div class="form-group mb-4">
+                                        <label for="Instituicao"></label>
+                                        <div class="input-group">                                            
+                                            {{ form.Instituicao }}
+                                        </div>  
+                                        
+                                    </div>
+
+
                                     <!-- End of Form -->
                                     <div class="mb-4">
                                         <div class="form-check">
@@ -113,8 +122,8 @@
 
                             <div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="fw-normal">
-                                    Already have an account? 
-                                    <a href="{% url 'login' %}" class="fw-bold">Sign IN</a>
+                                    Já tem uma conta? 
+                                    <a href="{% url 'login' %}" class="fw-bold">Entrar</a>
                                 </span>
                             </div>
                         </div>
