--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -15,13 +15,13 @@
               <div class="d-flex align-items-center">
                 <div class="avatar-lg me-4">
                   <img src="/static/assets/img/team/profile-picture-1.jpg" class="card-img-top rounded-circle border-white"
-                    alt="Bonnie Green">
+                    alt="{{ request.user.username }}">
                 </div>
                 <div class="d-block">
-                  <h2 class="h5 mb-3">Hi, Jane</h2>
-                  <a href="/page-sign-in.html" class="btn btn-secondary btn-sm d-inline-flex align-items-center">
+                  <h2 class="h5 mb-3">Olá, {{ request.user.username }}</h2>
+                  <a href="{% url 'logout' %}" class="btn btn-secondary btn-sm d-inline-flex align-items-center">
                     <svg class="icon icon-xxs me-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>            
-                    Sign Out
+                    Sair
                   </a>
                 </div>
               </div>
@@ -35,7 +35,7 @@
             </div>
             <ul class="nav flex-column pt-3 pt-md-0">
               <li class="nav-item">
-                <a href="#top" class="nav-link d-flex align-items-center">
+                <a href="{% url 'ficha_imovel:criar' %}" class="nav-link d-flex align-items-center">
                   <span class="sidebar-icon">
                     <img src="/static/assets/img/brand/light.svg" height="20" width="20" alt="Volt Logo">
                   </span>
@@ -63,7 +63,7 @@
                 <a href="{% url 'users:perfil' %}" 
                   class="nav-link d-flex align-items-center">
                   <span class="sidebar-icon">
-                    <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path></svg>
+                    <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd"></path></svg>
                   </span>
                   <span class="sidebar-text">Meu Perfil</span>
                 </a>
@@ -71,7 +71,7 @@
               
               <li class="nav-item">
                 <a target="_blank" 
-                   href="#"
+                   href="{% url 'ficha_imovel:criar' %}"
                   class="btn btn-secondary d-flex align-items-center justify-content-center btn-upgrade-pro">
                   <span class="sidebar-icon d-inline-flex align-items-center justify-content-center">
                     <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z" clip-rule="evenodd"></path></svg>
