--- a/apps/templates/ficha_imovel/lista.html
+++ b/apps/templates/ficha_imovel/lista.html
@@ -82,8 +82,8 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
-                          456478
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
+                        <p class="text-info">  456478</p>
                       </a>
                   </td>
                   <td>
@@ -91,7 +91,7 @@
                   </td>
                   <td><span class="fw-normal">Meireles</span></td>                        
                   <td><span class="fw-normal">30 jan 2022</span></td>
-                  <td><span class="fw-bold">$799,00</span></td>
+                  <td><span class="fw-bold">$799.000,00</span></td>
                   <td><span class="fw-bold text-warning">A Venda</span></td>
                   <td>
                       <div class="btn-group">
@@ -112,7 +112,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456423
                       </a>
                   </td>
@@ -142,7 +142,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456420
                       </a>
                   </td>
@@ -172,7 +172,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456421
                       </a>
                   </td>
@@ -202,7 +202,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456420
                       </a>
                   </td>
@@ -232,7 +232,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456479
                       </a>
                   </td>
@@ -263,7 +263,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456478
                       </a>
                   </td>
@@ -293,7 +293,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           453673
                       </a>
                   </td>
@@ -323,7 +323,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456468
                       </a>
                   </td>
@@ -353,7 +353,7 @@
               <!-- Item -->
               <tr>
                   <td>
-                      <a href="#" class="fw-bold">
+                      <a href="{% url 'ficha_imovel:laudo' %}" class="fw-bold">
                           456478
                       </a>
                   </td>
