--- a/apps/templates/ficha_imovel/laudo.html
+++ b/apps/templates/ficha_imovel/laudo.html
@@ -19,24 +19,23 @@
     <div class="container-fluid">                           
         <div class="card card-body border-0 shadow mb-4">            
             <div class="row justify-content-between">
-                <div class="col-md-2 mb-0">
+                <div class="col-auto  col-md-2 mb-0">
                     <label>CÓDIGO UN.</label>
                     <label class="form-control">{{ request.user.first_name }}</label>  
                 </div> 
-                <div class="col-md-10 mb-3">
+                <div class="col-auto  col-md-10 mb-3">
                     <h2 class="h2 mb-5 row justify-content-center">Ficha de Imóveis</h2>
                 </div>  
-            </div>
-            
+            </div>            
             <div class="row mb-3 justify-content-center">                
-                <div class="col-sm-auto">         
+                <div class="col-md-auto col-auto">         
                         <label class="py-2">Canto de Pedra: </label>                                      
                 </div>
-                <div class="col-sm-auto">
+                <div class="col-md-auto col-auto">
                     <label class="form-control">Sim</label>   
                 </div> 
                                   
-                <div class="col-sm-auto offset-sm-8 row justify-content-md-end">                    
+                <div class="col-sm-auto offset-sm-7 justify-content-md-end">                    
                         <label class="h6">Data: </label>                
                 </div> 
                 <div class="col-sm-auto">
@@ -49,64 +48,119 @@
                         conteudo da div
                     </div>
                 </div>
-            </div>                
-            <div class="row">            
-                <div class="col-sm-1 mb-1">                   
-                        <label class="py-2">Tipo:</label>
-                </div>
-                <div class="col-sm-4 mb-1">
-                    <label class="form-control">{{ request.user.first_name }}</label>
-                </div>
-                <div class="col-sm-1 mb-1 offset-sm-1">
-                        <label class="py-2">Bairro:</label>  
-                </div>
-                <div class="col-sm-4 mb-1">
-                    <label class="form-control">{{ request.user.first_name }}</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-1 mb-1">
-                        <label class="py-2">Endereço:</label>    
-                </div>
-                <div class="col-md-10 mb-1">
-                    <div>                             
+            </div>  
+            
+            <div class="card col-md-12  card-body border-1 shadow mb-4">
+                <div class="col-11 row justify-content-center">            
+                    <div class="col-sm-1 mb-1">                   
+                            <label class="py-2">Tipo:</label>
+                    </div>
+                    <div class="col-sm-4 mb-1">
+                        <label class="form-control">{{ request.user.first_name }}</label>
+                    </div>
+                    <div class="col-sm-1 mb-1 offset-sm-1">
+                            <label class="py-2">Bairro:</label>
+                    </div>
+                    <div class="col-sm-4 mb-1">
                         <label class="form-control">{{ request.user.first_name }}</label>
                     </div>
                 </div>
-            </div>
-                <div class="col-md-2 mb-1">
-                    <div>
-                        <label>Primeiro Nome</label>                                
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                <div class="col-11 row justify-content-center">
+                    <div class="col-md-1 mb-1">
+                            <label class="py-2">Endereço:</label>    
+                    </div>
+                    <div class="col-md-10 mb-1">
+                        <div>                             
+                            <label class="form-control">{{ request.user.first_name }}</label>
+                        </div>
                     </div>
                 </div>
 
-            
-                <div class="col-md-2 mb-1">
-                    <div>
-                        <label for="first_name">Primeiro Nome</label>                                
+                <div class="row">
+                    <div class="col-md-1 mb-1">
+                            <label class="py-2">Localização:</label>    
+                    </div>
+                    <div class="col-md-10 mb-1">
+                        <div>                             
+                            <label class="form-control">{{ request.user.first_name }}</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 mb-1">
+                            <label class="py-2">Condomínio:</label>    
+                    </div>
+                    <div class="col-md-10 mb-1">
+                        <div>                             
+                            <label class="form-control">{{ request.user.first_name }}</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 mb-1">
+                            <label class="py-2">Nome do Edifício:</label>    
+                    </div>
+                    <div class="col-md-10 mb-1">
+                        <div>                             
+                            <label class="form-control">{{ request.user.first_name }}</label>
+                        </div>
+                    </div>
+                </div>
+        </div>
+
+            <div class="card col-md-12  card-body border-1 shadow mb-4">
+                <div class="col-11 row justify-content-center">            
+                    <div class="col-auto row col-md-1 mb-1">                   
+                            <label class="py-2">Posição:</label>
+                    </div>
+                    <div class="col-auto row col-md-3 mb-1">
+                        <label class="form-control">{{ request.user.first_name }}</label>
+                    </div>
+                    <div class="col-auto row col-md-1 mb-1">
+                        <div class="col-md-auto"><label class="py-2">SOL:</label></div>
+                        
+                    </div>
+                    <div class="col-auto row col-md-2 mb-1">
+                        <div class="col-md-auto"><label class="form-control">Manhã</label></div>
+                    </div>
+                    <div class="col-auto row col-md-1 mb-1">                   
+                        <label class="py-2">Placa::</label>
+                    </div>
+                    <div class="col-auto row  col-md-2 mb-1">
+                        <label class="form-control">{{ request.user.first_name }}</label>
+                    </div>
+                    <div class="col-auto row col-md-1 mb-1">                   
+                        <label class="py-2">Chave:</label>
+                    </div>
+                    <div class="col-auto row col-md-2 mb-1">
                         <label class="form-control">{{ request.user.first_name }}</label>
                     </div>
                 </div>
-            
+            </div>
 
+
+            <div class="col-md-2 mb-1">
+                <div>
+                    <label>Primeiro Nome</label>                                
+                    <label class="form-control">{{ request.user.first_name }}</label>
+                </div>
+            </div>            
+            <div class="col-md-2 mb-1">
+                <div>
+                    <label for="first_name">Primeiro Nome</label>                                
+                    <label class="form-control">{{ request.user.first_name }}</label>
+                </div>
+            </div>           
 
         </div>
     </div>  
     
-    <div class="row mx-n1">
-        <div class="col border px-5 ">Padding de coluna customizado.</div>
-        <div class="col py-3  border bg-light">Padding de coluna customizado.</div>
-        </div>
+    
     
     
         
-       
-
-
-
-
-
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
