--- a/apps/templates/ficha_imovel/laudo.html
+++ b/apps/templates/ficha_imovel/laudo.html
@@ -27,12 +27,12 @@
                     <h2 class="h2 mb-5 row justify-content-center">Ficha de Imóveis</h2>
                 </div>  
             </div>            
-            <div class="row mb-3 justify-content-center">                
+            <div class="row mb-4">                
                 <div class="col-md-auto col-auto">         
-                        <label class="py-2">Canto de Pedra: </label>                                      
+                        <label>Canto de Pedra: </label>                                      
                 </div>
                 <div class="col-md-auto col-auto">
-                    <label class="form-control">Sim</label>   
+                    <label class="h6" id="linha">Sim</label>   
                 </div> 
                                   
                 <div class="col-sm-auto offset-sm-7 justify-content-md-end">                    
@@ -43,7 +43,7 @@
                 </div>                                              
             </div>
             <div class="row mb-3">
-                <div class="col-sm-4 mb-3">
+                <div class="col-sm-6 mb-3">
                     <div id="linha">
                         conteudo da div
                     </div>
@@ -51,108 +51,183 @@
             </div>  
             
             <div class="card col-md-12  card-body border-1 shadow mb-4">
-                <div class="col-11 row justify-content-center">            
+                <div class="row">            
                     <div class="col-sm-1 mb-1">                   
                             <label class="py-2">Tipo:</label>
                     </div>
-                    <div class="col-sm-4 mb-1">
+                    <div class="col-sm-5 mb-1">
                         <label class="form-control">{{ request.user.first_name }}</label>
                     </div>
-                    <div class="col-sm-1 mb-1 offset-sm-1">
+                    <div class="col-sm-1 mb-1 offset-sm-2">
                             <label class="py-2">Bairro:</label>
                     </div>
-                    <div class="col-sm-4 mb-1">
+                    <div class="col-sm-3 mb-1">
                         <label class="form-control">{{ request.user.first_name }}</label>
                     </div>
                 </div>
-                <div class="col-11 row justify-content-center">
+                <div class="row">
                     <div class="col-md-1 mb-1">
                             <label class="py-2">Endereço:</label>    
                     </div>
-                    <div class="col-md-10 mb-1">
+                    <div class="col-md-11 mb-1">
                         <div>                             
                             <label class="form-control">{{ request.user.first_name }}</label>
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-md-1 mb-1">
                             <label class="py-2">Localização:</label>    
                     </div>
-                    <div class="col-md-10 mb-1">
+                    <div class="col-md-11 mb-1">
                         <div>                             
                             <label class="form-control">{{ request.user.first_name }}</label>
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-md-1 mb-1">
                             <label class="py-2">Condomínio:</label>    
                     </div>
-                    <div class="col-md-10 mb-1">
+                    <div class="col-md-11 mb-1">
                         <div>                             
                             <label class="form-control">{{ request.user.first_name }}</label>
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-md-1 mb-1">
-                            <label class="py-2">Nome do Edifício:</label>    
+                        <label class="py-2">Edifício:</label>    
                     </div>
-                    <div class="col-md-10 mb-1">
+                    <div class="col-md-11 mb-1">                                                   
+                        <label class="form-control">Edifício Torre Alta</label>                        
+                    </div>
+                </div>
+            </div>
+
+            <div class="card card-body border-1 shadow mb-4">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">           
+                            <div class="col-auto col-md-2">                   
+                                <label class="py-2">Posição:</label>
+                            </div>
+                            <div class="col-auto col-md-4">
+                                <label class="form-control">Frente</label>
+                            </div>
+                            <div class="col-auto offset-md-1 col-md-1 mb-1">
+                                <label class="py-2">SOL:</label>                            
+                            </div>
+                            <div class="col-auto col-md-auto mb-1">
+                                <label class="form-control">Manhã</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-auto col-md-2 mb-1">                   
+                                <label class="py-2">Imóvel:</label>
+                            </div>
+                            <div class="col-md-4">
+                                <label class="form-control">Vazio</label>
+                            </div>
+                        </div>
+                    </div>            
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-auto col-md-2 mb-1">                   
+                                <label class="py-2">Placa:</label>
+                            </div>
+                            <div class="col-auto col-md-4 mb-1">
+                                <label class="form-control">-------</label>
+                            </div>
+                            <div class="col-auto col-md-1 offset-md-1 mb-1">                   
+                                <label class="py-2">Chave:</label>
+                            </div>
+                            <div class="col-auto col-md-4 mb-1">
+                                <label class="form-control">---------</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2 mb-1">
+                                    <label class="py-2">Agendar:</label>
+                            </div>
+                            <div class="col-md-10 mb-1">
+                                <label class="form-control">Com corretor dia xx/xxxx</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-body border-1 shadow mb-4">
+                <div class="row">
+                    <div class="col-md-1 mb-1">
+                            <label class="py-2">Proprietário:</label>    
+                    </div>
+                    <div class="col-md-11 mb-1">
                         <div>                             
                             <label class="form-control">{{ request.user.first_name }}</label>
                         </div>
                     </div>
                 </div>
-        </div>
-
-            <div class="card col-md-12  card-body border-1 shadow mb-4">
-                <div class="col-11 row justify-content-center">            
-                    <div class="col-auto row col-md-1 mb-1">                   
-                            <label class="py-2">Posição:</label>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-2 offset-md-1">Celular:</div>
+                            <div class="col-md-9">
+                                <label class="form-control">----------</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-auto row col-md-3 mb-1">
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-3">Residêncial:</div>
+                            <div class="col-md-9">
+                                <label class="form-control">----------</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-auto row col-md-1 mb-1">
-                        <div class="col-md-auto"><label class="py-2">SOL:</label></div>
-                        
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-3">Comercial:</div>
+                            <div class="col-md-9">
+                                <label class="form-control">----------</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-auto row col-md-2 mb-1">
-                        <div class="col-md-auto"><label class="form-control">Manhã</label></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-1 mb-1">
+                        <label class="py-2 px-5">E-mail:</label>    
                     </div>
-                    <div class="col-auto row col-md-1 mb-1">                   
-                        <label class="py-2">Placa::</label>
+                    <div class="col-md-11 mb-1">
+                        <div>                             
+                            <label class="form-control">{{ request.user.first_name }}</label>
+                        </div>
                     </div>
-                    <div class="col-auto row  col-md-2 mb-1">
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                </div>
+                <div class="row">
+                    <div class="col-md-1 mb-1 px-4">Cônjuge:</div>
+                    <div class="col-md-7 mb-1">
+                        <label class="form-control">----------</label>
                     </div>
-                    <div class="col-auto row col-md-1 mb-1">                   
-                        <label class="py-2">Chave:</label>
+                    <div class="col-md-1 px-4 mb-1">Celular:</div>
+                    <div class="col-md-3 mb-1">
+                        <label class="form-control">----------</label>
                     </div>
-                    <div class="col-auto row col-md-2 mb-1">
-                        <label class="form-control">{{ request.user.first_name }}</label>
+                    <div class="row">
+                        <div class="col-md-1 mb-1">
+                            <label class="py-2 px-5">E-mail:</label>    
+                        </div>
+                        <div class="col-md-10 mb-1">
+                            <div>                             
+                                <label class="form-control">{{ request.user.first_name }}</label>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
 
-            <div class="col-md-2 mb-1">
-                <div>
-                    <label>Primeiro Nome</label>                                
-                    <label class="form-control">{{ request.user.first_name }}</label>
-                </div>
-            </div>            
-            <div class="col-md-2 mb-1">
-                <div>
-                    <label for="first_name">Primeiro Nome</label>                                
-                    <label class="form-control">{{ request.user.first_name }}</label>
-                </div>
-            </div>           
+                
 
         </div>
     </div>  
